--- a/app/design/adminhtml/default/default/template/maho/giftcard/pdf/giftcard_simple.phtml
+++ b/app/design/adminhtml/default/default/template/maho/giftcard/pdf/giftcard_simple.phtml
@@ -17,7 +17,7 @@ $giftcards = $this->getGiftcards();
     <meta charset="UTF-8">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Helvetica, sans-serif;
             margin: 20px;
         }
         .giftcard {
