--- a/app/design/adminhtml/default/default/template/sales/order/comments/view.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/comments/view.phtml
@@ -31,18 +31,18 @@
     <ul class="note-list">
     <?php foreach ($_entity->getCommentsCollection(true) as $_comment): ?>
         <li>
-            <strong><?= $this->helper('core')->formatDate($_comment->getCreatedAtDate(), 'medium') ?></strong>
-            <?= $this->helper('core')->formatTime($_comment->getCreatedAtDate(), 'medium') ?><span class="separator">|</span><small><?= $this->helper('sales')->__('Customer') ?>
-            <strong class="subdue">
-            <?php if ($_comment->getIsCustomerNotified()): ?>
-            <?= $this->helper('sales')->__('Notified') ?>
-            <img src="<?= $this->getSkinUrl('images/ico_success.gif') ?>" width="16" height="16" alt="" />
-            <?php else: ?>
-            <?= $this->helper('sales')->__('Not Notified') ?>
-            <?php endif ?>
-            </strong></small>
-            <br/>
-            <?= $this->escapeHtml($_comment->getComment(), ['b', 'br', 'strong', 'i', 'u', 'a']) ?>
+            <div class="note-header">
+                <span>
+                    <strong><?= $this->helper('core')->formatDate($_comment->getCreatedAtDate(), 'medium') ?></strong>
+                    <?= $this->helper('core')->formatTime($_comment->getCreatedAtDate(), 'medium') ?>
+                </span>
+                <?php if ($_comment->getIsCustomerNotified()): ?>
+                <span class="icon" title="<?= $this->helper('sales')->__('Customer Notified') ?>"><?= $this->getIconSvg('message') ?></span>
+                <?php else: ?>
+                <span class="icon" title="<?= $this->helper('sales')->__('Customer Not Notified') ?>"><?= $this->getIconSvg('message-off') ?></span>
+                <?php endif ?>
+            </div>
+            <div><?= $this->escapeHtml($_comment->getComment(), ['b', 'br', 'strong', 'i', 'u', 'a']) ?></div>
         </li>
     <?php endforeach ?>
     </ul>
