--- a/app/design/frontend/base/default/template/maho/giftcard/checkout/payment/giftcard.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/checkout/payment/giftcard.phtml
@@ -149,7 +149,8 @@ const GiftcardCheckout = {
                 method: 'POST',
                 body: new URLSearchParams({
                     form_key: this.config.formKey,
-                    giftcard_code: code
+                    giftcard_code: code,
+                    checkout: '1'
                 })
             });
 
@@ -157,7 +158,7 @@ const GiftcardCheckout = {
                 this.showMessage(response.message, 'success');
                 codeInput.value = '';
                 this.updateUI(response.data);
-                this.updatePaymentMethods(response.data.is_fully_covered);
+                this.updatePaymentMethods(response.data.is_fully_covered, response.payment_methods_html);
             } else {
                 this.showMessage(response.message, 'error');
             }
@@ -175,13 +176,14 @@ const GiftcardCheckout = {
                 method: 'POST',
                 body: new URLSearchParams({
                     form_key: this.config.formKey,
-                    code: code
+                    code: code,
+                    checkout: '1'
                 })
             });
 
             if (response.success) {
                 this.updateUI(response.data);
-                this.updatePaymentMethods(response.data.is_fully_covered);
+                this.updatePaymentMethods(response.data.is_fully_covered, response.payment_methods_html);
             } else {
                 this.showMessage(response.message, 'error');
             }
@@ -252,14 +254,27 @@ const GiftcardCheckout = {
         }
     },
 
-    updatePaymentMethods(isFullyCovered) {
-        // When gift cards fully cover the order (grand total = $0),
-        // the standard "free" payment method will automatically be available.
-        // We don't need to manually manage payment method visibility.
+    updatePaymentMethods(isFullyCovered, paymentMethodsHtml) {
+        // If we received updated payment methods HTML, replace the payment methods section
+        if (paymentMethodsHtml) {
+            const methodsContainer = document.getElementById('checkout-payment-method-load');
+            if (methodsContainer) {
+                methodsContainer.innerHTML = paymentMethodsHtml;
 
-        // Just trigger checkout totals reload to update available payment methods
-        if (typeof checkout !== 'undefined' && checkout.reloadPaymentMethods) {
-            checkout.reloadPaymentMethods();
+                // Re-initialize payment object if it exists
+                if (typeof payment !== 'undefined') {
+                    // Find the selected method from the new HTML
+                    const selectedInput = methodsContainer.querySelector('input[name="payment[method]"]:checked');
+                    if (selectedInput) {
+                        payment.currentMethod = selectedInput.value;
+                    }
+                }
+            }
+        }
+
+        // Also trigger totals reload if available
+        if (typeof checkout !== 'undefined' && checkout.reloadTotals) {
+            checkout.reloadTotals();
         }
     },
 
